# hatch-sh

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  ci-plan.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts  vitest.workspace.ts
.github/: risk-policy.json
.github/workflows/: ci-nightly-desktop.yml  ci-pr.yml  ci.yml  nightly-desktop.yml  release-desktop.yml  review-auto-resolve-bot-threads.yml  review-rerun-request.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-build-check.txt  task-2-type-safety.txt  task-3-status-transitions.txt  task-4-chat-search.txt  task-6-slash-commands.txt  task-7-types-check.txt
.sisyphus/plans/: feature-parity-v3.md  living-prd.md
agents/: AGENT_1_FOUNDATION.md  AGENT_2_SMART_CONTRACTS.md  AGENT_3_BACKEND_API.md  AGENT_4_UI_COMPONENTS.md  AGENT_5_CHAT_INTERFACE.md  AGENT_6_LIVE_PREVIEW.md  AGENT_7_WEB3_AUTH.md  AGENT_8_TOKEN_LAUNCH_UI.md  IMPLEMENTATION_ROADMAP.md  QUICKSTART.md  builder.md  planner.md  releaser.md  reviewer.md  tester.md
apps/desktop/: .gitignore  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: git.rs  github.rs  keychain.rs  lib.rs  main.rs  skills.rs
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json
docs/: CRITICAL_DESKTOP_FLOWS.md  E2E_DESKTOP_MATRIX.md  INCIDENT_TO_TEST.md  OPERATING_SYSTEM.md  QUALITY_LOCKDOWN.md  RELEASE_PLAYBOOK.md  TEST_STRATEGY_DESKTOP.md
docs/prd/: openskills-integration.md
homebrew-tap/Casks/: hatch.rb
scripts/: bump-version.mjs  e2e-test.sh  review-control-plane.mjs  risk-policy-gate.mjs  scrape-skillsmp.ts  update-homebrew-tap.sh
services/api/: .dev.vars.example  README.md  drizzle.config.ts  (+4 more)
tasks/: todo.md
(+284 files in other folders)
