[package]
name = "vibed-desktop"
version = "0.1.0"
description = "Vibed.fun Desktop App"
authors = ["vibed.fun"]
edition = "2021"

[lib]
name = "vibed_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"
open = "5"
lazy_static = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
