[package]
name = "hatch-desktop"
version = "0.1.0"
description = "Hatch.sh Desktop App"
authors = ["hatch.sh"]
edition = "2021"

[lib]
name = "hatch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# Dev profile - optimized for fast compilation
[profile.dev]
debug = 0              # No debug symbols (faster compile + link)
opt-level = 0          # No optimizations (faster compile)
incremental = true     # Incremental compilation

# Dev dependencies - optimize deps even in dev (they rarely change)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
